// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<TextArea/> renders correctly 1`] = `
.c0 {
  width: 100%;
}

.c1 {
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c2 {
  display: block;
  padding-bottom: 7px;
}

.c3 {
  padding: 12px;
  border: 1px solid #BEC8D2;
  border-radius: 10px;
  width: 100%;
  margin-bottom: 0px;
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <label
      className="c2"
    >
      Test
    </label>
  </div>
  <textarea
    className="c3"
    id="test"
    rows={5}
    value="test"
  />
</div>
`;

exports[`<TextArea/> renders correctly with error 1`] = `
.c0 {
  width: 100%;
}

.c1 {
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c2 {
  display: block;
  padding-bottom: 7px;
}

.c3 {
  padding: 12px;
  border: 1px solid #FF7F7F;
  border-radius: 10px;
  width: 100%;
  margin-bottom: 8px;
}

.c4 {
  color: #FF7F7F;
  font-size: 0.9rem;
  margin-left: 7px;
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <label
      className="c2"
    >
      Test
    </label>
  </div>
  <textarea
    className="c3"
    id="test"
    rows={5}
    value="test"
  />
  <p
    className="c4"
  >
    Test Error
  </p>
</div>
`;
